# s3-turbo-list

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-assets.yml  release-dispatch.yml  release-tag.yml
docs/: agent-usage.md  benchmarking.md  build-release.md  compat-probe.md  endpoint-profiles.md  endpoint-validation-plan.md  local-s3-mock.md  next-version-plan.md  release-checklist.md  trace-reference.md  tuning.md
docs/validation-results/: aws-s3-baseline-20260514.md  bos-listobjects-v2-pagination-compatibility-note-20260514.md  bos-listobjectsv2-compatibility-resolved-20260617.md  bos-s3-compatible-20260514.md  compression-benchmark-20260524.md  data-map-throughput-benchmark-20260531.md  diff-map-benchmark-20260531.md  diff-output-benchmark-20260531.md  diff-output-shapes-benchmark-20260605.md  endpoint-validation-plan-20260514.md  final-validation-summary-20260514.md  list-end-to-end-hot-path-benchmark-20260611.md  list-output-hot-path-benchmark-20260606.md  list-output-include-fast-path-benchmark-20260607.md  list-parquet-etag-buffer-benchmark-20260611.md  list-parquet-single-pass-benchmark-20260606.md  minio-part-a-20260514.md  oss-list-hints-benchmark-20260611.md  output-benchmark-20260525.md  v0.1.1-code-review-fixes-20260516.md
examples/: README.md  agent-dry-run.sh  agent-run-with-manifest.sh  auto-hints-sampled.sh  aws-basic-list.sh  bos-basic-list.sh  bos-path-style-diagnostic.sh  checkpoint-resume.sh  diff-basic.sh  hints-file-toml.sh  hints-tooling-local.sh  hints-validate.sh  inspect-trace.py  minio-basic-list.sh  read-parquet.py  read_manifest.py  trace-debug.sh  validate-hints.sh
scripts/: benchmark-compression.sh  benchmark-local.sh  benchmark-output-formats.sh  build-release.sh  check-release-env.sh  verify-release-assets.sh
src/: agent.rs  auto_hints.rs  checkpoint.rs  compat_probe.rs  config.rs  core.rs  data_map.rs  diff.rs  error.rs  filter_expr.rs  hints.rs  lib.rs  local_tools.rs  main.rs  mon.rs  profiles.rs  stats.rs  tasks_s3.rs  trace.rs  utils.rs
tests/: checkpoint_integration.rs  cli_integration.rs  data_map_integration.rs  diff_integration.rs  s3_mock_integration.rs  trace_integration.rs
