# Releases are driven by this version field: see docs/release-checklist.md.
[package]
name = "s3-turbo-list"
version = "0.22.0"
edition = "2021"
authors = ["S3 Turbo List Contributors"]
rust-version = "1.91.1"
description = "High-performance concurrent Amazon S3 bucket listing with adaptive key-space partitioning"
license = "Apache-2.0"

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-smithy-runtime = { version = "1", features = ["client"] }
aws-smithy-runtime-api = "1"
aws-smithy-async = "1"
arrow = "54"
arrow-array = "54"
arrow-schema = "54"
parquet = { version = "54", features = ["async"] }
futures = "0.3"
ctrlc = "3"
chrono = "0.4"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "6"
dirs-next = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

# Release artifacts ship from `cargo build --release` (see the release workflow),
# so optimize that profile for a lean, fast binary: strip symbols, enable
# cross-crate inlining (helps the CPU-bound Parquet encode/compress path on
# fast, non-rate-limited stores), and use a single codegen unit for best code
# generation. `panic` is left as the default (unwind) so Ctrl-C handling and
# tests are unaffected.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
